Prevent content toggle panel from showing scrollbar

--- a/src/blocks/content-toggle/style.scss
+++ b/src/blocks/content-toggle/style.scss
@@ -80,5 +80,5 @@
 
 .wp-block-ub-content-toggle-accordion-content-wrap {
 	padding: 13px 4%;
-	overflow-y: hidden;
+	overflow: hidden;
 }
